test/expected/explain_rr.out
explain int& &r
           ^
12: error: reference not supported in C
